# FileCopier-C

./: .gitignore  CMakeLists.txt  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  filecopier.ini
.github/workflows/: ci.yml
crates/app-cli/: Cargo.toml
crates/app-cli/src/: main.rs
crates/app-gui/: Cargo.toml
crates/lib-core/: Cargo.toml
crates/lib-core/src/: config.rs  lib.rs  telemetry.rs
crates/lib-core/src/checksum/: blake3_impl.rs  mod.rs  sha2_impl.rs  xxhash_impl.rs
crates/lib-core/src/engine/: block.rs  orchestrator.rs  swarm.rs
crates/lib-core/src/engines/: block.rs  mod.rs  orchestrator.rs  swarm.rs
crates/lib-core/src/engines/pipeline/: mod.rs  reader.rs  writer.rs
crates/lib-core/src/hash/: xxhash_impl.rs
crates/lib-core/src/pipeline/: reader.rs  writer.rs
crates/lib-core/tests/: checkpoint.rs
crates/lib-os/: Cargo.toml
crates/lib-os/src/: detect.rs  lib.rs  traits.rs
crates/lib-os/src/linux/: io_uring.rs
crates/lib-os/src/unix/: mod.rs
crates/lib-os/src/windows/: fs.rs
include/: AppController.h  BufferManager.h  DirectoryScanner.h  EventBus.h  FileCopyEngine.h  Jobs.h  Language.h  PathUtils.h  ThreadPool.h  Utils.h
include/core/: FileCopyEngine.h
include/jobs/: Job.h  JobManager.h
include/ui/: ConfigDialog.h  ErrorDialog.h  ErrorLog.h  MainWindow.h  ProgressPanel.h  TrayIcon.h
src/: AppController.cpp  main.cpp
src/core/: BufferManager.cpp  DirectoryScanner.cpp  FileCopyEngine.cpp  ThreadPool.cpp
src/jobs/: JobManager.cpp  JobQueue.cpp  JobState.cpp  ResumeManager.cpp
src/ui/: ConfigDialog.cpp  ErrorDialog.cpp  ErrorLog.cpp  MainWindow.cpp  ProgressPanel.cpp  TrayIcon.cpp
src/utils/: ConfigManager.cpp  ErrorHandler.cpp  EventBus.cpp  Language.cpp  Logger.cpp
